5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4345/executions/1577_996.log
== TEST (2019-03-14 19:11:19) 
-- CODE:
print("*****")
print("* o o * ")
print("*  ^  * ")
print("---")
print("*****")
-- OUTPUT:
*****
* o o * 
*  ^  * 
---
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:11:22) 
-- CODE:
print("*****")
print("* o o * ")
print("*  ^  * ")
print("---")
print("*****")
-- EXECUTION TIME:
0.158089
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o * 
*  ^  * 
---
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:11:53) 
-- CODE:
print("*****")
print("*oo*")
print("*^*")
print("---")
print("*****")
-- OUTPUT:
*****
*oo*
*^*
---
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:11:55) 
-- CODE:
print("*****")
print("*oo*")
print("*^*")
print("---")
print("*****")
-- EXECUTION TIME:
0.157415
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
*oo*
*^*
---
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:12:40) 
-- CODE:
print("*****")
print((*oo*)")
print("*^*")
print("---")
print("*****")
-- ERROR:
File "XXXX", line 2
    print((*oo*)")
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:12:43) 
-- CODE:
print("*****")
print((*oo*)")
print("*^*")
print("---")
print("*****")
-- EXECUTION TIME:
0.135199
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 2
    print((*oo*)")
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:13:17) 
-- CODE:
print("*****")
print(""(* o o *)")
print("*^*")
print("---")
print("*****")
-- ERROR:
File "XXXX", line 2
    print(""(* o o *)")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:13:36) 
-- CODE:
print("*****")
print("(* o o *)")
print("*^*")
print("---")
print("*****")
-- OUTPUT:
*****
(* o o *)
*^*
---
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:13:38) 
-- CODE:
print("*****")
print("(* o o *)")
print("*^*")
print("---")
print("*****")
-- EXECUTION TIME:
0.224075
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
*^*
---
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:15:16) 
-- CODE:
print  ("*****")
print("(* o o *)")
print (" * ^ *")
print (" *---*")
print  ("*****")
-- OUTPUT:
*****
(* o o *)
 * ^ *
 *---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:19) 
-- CODE:
print  ("*****")
print("(* o o *)")
print (" * ^ *")
print (" *---*")
print  ("*****")
-- EXECUTION TIME:
0.117617
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 * ^ *
 *---*
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:16:19) 
-- CODE:
print  (" *****")
print("( * o o *)")
print   (" * ^ *")
print (" * --- *")
print  (" ***** ")
-- OUTPUT:
*****
( * o o *)
 * ^ *
 * --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:16:23) 
-- CODE:
print  (" *****")
print("( * o o *)")
print   (" * ^ *")
print (" * --- *")
print  (" ***** ")
-- EXECUTION TIME:
0.149579
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
( * o o *)
 * ^ *
 * --- *
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:16:39) 
-- CODE:
print  (" *****")
print("( * o o *)")
print   (" * ^ * ")
print (" * --- *")
print  (" ***** ")
-- OUTPUT:
*****
( * o o *)
 * ^ * 
 * --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:16:42) 
-- CODE:
print  (" *****")
print("( * o o *)")
print   (" * ^ * ")
print (" * --- *")
print  (" ***** ")
-- EXECUTION TIME:
0.149348
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
( * o o *)
 * ^ * 
 * --- *
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:16:50) 
-- CODE:
print  (" ***** ")
print("( * o o *)")
print   (" * ^ * ")
print (" * --- *")
print  (" ***** ")
-- OUTPUT:
***** 
( * o o *)
 * ^ * 
 * --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:16:52) 
-- CODE:
print  (" ***** ")
print("( * o o *)")
print   (" * ^ * ")
print (" * --- *")
print  (" ***** ")
-- EXECUTION TIME:
0.129636
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
( * o o *)
 * ^ * 
 * --- *
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:17:17) 
-- CODE:
print  (" ***** ")
print(" ( * o o *) ")
print   (" * ^ * ")
print (" * --- *")
print  (" ***** ")
-- OUTPUT:
***** 
 ( * o o *) 
 * ^ * 
 * --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:17:20) 
-- CODE:
print  (" ***** ")
print(" ( * o o *) ")
print   (" * ^ * ")
print (" * --- *")
print  (" ***** ")
-- EXECUTION TIME:
0.151395
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
 ( * o o *) 
 * ^ * 
 * --- *
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:17:35) 
-- CODE:
print  (" ***** ")
print(" ( * o o *) ")
print   (" * ^ * ")
print (" * --- * ")
print  (" ***** ")
-- OUTPUT:
***** 
 ( * o o *) 
 * ^ * 
 * --- * 
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:17:37) 
-- CODE:
print  (" ***** ")
print(" ( * o o *) ")
print   (" * ^ * ")
print (" * --- * ")
print  (" ***** ")
-- EXECUTION TIME:
0.164967
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
 ( * o o *) 
 * ^ * 
 * --- * 
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:18:01) 
-- CODE:
print  (" ***** ")
print(" ( * o o *)")
print   (" * ^ * ")
print (" * --- * ")
print  (" ***** ")
-- OUTPUT:
***** 
 ( * o o *)
 * ^ * 
 * --- * 
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:18:03) 
-- CODE:
print  (" ***** ")
print(" ( * o o *)")
print   (" * ^ * ")
print (" * --- * ")
print  (" ***** ")
-- EXECUTION TIME:
0.149661
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
 ( * o o *)
 * ^ * 
 * --- * 
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:19:33) 
-- CODE:
print  ("*****")
print("( * o o *)")
print   (" * ^ * ")
print (" * --- * ")
print  (" ***** ")
-- OUTPUT:
*****
( * o o *)
 * ^ * 
 * --- * 
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:19:36) 
-- CODE:
print  ("*****")
print("( * o o *)")
print   (" * ^ * ")
print (" * --- * ")
print  (" ***** ")
-- EXECUTION TIME:
0.308904
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
( * o o *)
 * ^ * 
 * --- * 
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:20:14) 
-- CODE:
print  ("*****")
print("(* o o *)")
print   (" * ^ * ")
print ("* --- *")
print  ("*****")
-- OUTPUT:
*****
(* o o *)
 * ^ * 
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:20:17) 
-- CODE:
print  ("*****")
print("(* o o *)")
print   (" * ^ * ")
print ("* --- *")
print  ("*****")
-- EXECUTION TIME:
0.187936
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 * ^ * 
* --- *
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
